--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "api": "nodemon index.js",
     "app": "npm run start --prefix digztr",
     "dev": "concurrently \"npm run api\" \"npm run app\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd digztr && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
