--- a/digztr/.env
+++ b/digztr/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:8000
+REACT_APP_API_URL=https://digztr.herokuapp.com/
 REACT_APP_IMGIX_URL=https://digztr-temp.imgix.net
