--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "method-override": "^2.3.10",
     "mongoose": "^4.13.4",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.4.1",
     "nodemon": "^1.12.1",
     "winston": "^2.4.0"
   }
