--- a/digztr/package.json
+++ b/digztr/package.json
@@ -13,17 +13,19 @@
     "jquery": "^3.2.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
     "react-router": "3.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.17",
+    "react-snapshot": "^1.3.0",
     "redux": "^3.7.2",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-snapshot",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
