--- a/digztr/package.json
+++ b/digztr/package.json
@@ -11,9 +11,12 @@
     "chart.js": "^2.7.1",
     "google-maps": "^3.2.1",
     "jquery": "^3.2.1",
+    "moment": "^2.20.1",
     "react": "^16.1.1",
+    "react-cookie": "^2.1.2",
     "react-dom": "^16.1.1",
     "react-helmet": "^5.2.0",
+    "react-lazy-cache": "^3.0.1",
     "react-redux": "^5.0.6",
     "react-router": "3.2.0",
     "react-router-redux": "^4.0.8",
