--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-jwt": "^5.3.0",
     "express-validation": "^1.0.2",
     "express-winston": "^2.4.0",
+    "fb": "^2.0.0",
     "helmet": "^3.9.0",
     "http-status": "^1.0.1",
     "jquery": "^3.2.1",
@@ -35,6 +36,8 @@
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
     "nodemon": "^1.12.1",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "winston": "^2.4.0"
   }
 }
